--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       overflow-x: hidden;
     }
     .cursor-quill {
-      cursor: url('https://<username>.github.io/ataraxia-quiz/assets/quill-cursor.png'), auto;
+      cursor: url('https://shelmasahayam.github.io/ataraxia-quiz/assets/quill-cursor.png'), auto;
     }
   </style>
 </head>
@@ -299,7 +299,7 @@
       const [result, setResult] = React.useState(null);
       const [email, setEmail] = React.useState('');
       const [isMusicPlaying, setIsMusicPlaying] = React.useState(false);
-      const audioRef = React.useRef(new Audio('https://<username>.github.io/ataraxia-quiz/assets/ataraxia-theme.mp3'));
+      const audioRef = React.useRef(new Audio('https://shelmasahayam.github.io/ataraxia-quiz/assets/ataraxia-theme.mp3'));
 
       const handleAnswer = (value, dimension) => {
         setScores((prev) => ({ ...prev, [value]: prev[value] + 1 }));
