--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       overflow-x: hidden;
     }
     .cursor-quill {
-      cursor: url('https://<your-username>.github.io/ataraxia-quiz/assets/quill-cursor.png'), auto;
+      cursor: url('https://shelmasahayam.github.io/ataraxia-quiz/assets/quill-cursor.png'), auto;
     }
   </style>
 </head>
