--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
           <h2 className="text-2xl font-cinzel text-amber-300 mb-4">Enter Your Email</h2>
           <p className="text-gray-300 mb-6">Provide your email to receive your Ataraxia realm results and updates.</p>
           <form
-            action="https://formspree.io/f/<your-formspree-id>"
+            action="https://formspree.io/f/mblkonvv"
             method="POST"
             onSubmit={onSubmit}
             className="flex flex-col items-center"
