--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       overflow-x: hidden;
     }
     .cursor-quill {
-      cursor: url('https://<your-username>.github.io/ataraxiaquiz/assets/quill-cursor.png'), auto;
+      cursor: url('https://shelmasahayam.github.io/ataraxiaquiz/assets/quill-cursor.png'), auto;
     }
     #result-card {
       background: rgba(0, 0, 0, 0.7);
@@ -329,7 +329,7 @@
       };
 
       const shareOnX = () => {
-        const text = encodeURIComponent(`I got ${result} in the Ataraxia Realm Quiz! Discover your realm at https://<your-username>.github.io/ataraxiaquiz/`);
+        const text = encodeURIComponent(`I got ${result} in the Ataraxia Realm Quiz! Discover your realm at https://shelmasahayam.github.io/ataraxiaquiz/`);
         window.open(`https://x.com/intent/tweet?text=${text}`, '_blank');
       };
 
@@ -348,10 +348,10 @@
 
       const getSigilImage = (realm) => {
         try {
-          return `https://<your-username>.github.io/ataraxiaquiz/assets/sigil-${realm.toLowerCase().replace(' ', '-')}.png`;
+          return `https://shelmasahayam.github.io/ataraxiaquiz/assets/sigil-${realm.toLowerCase().replace(' ', '-')}.png`;
         } catch (e) {
           console.error(`Sigil image for ${realm} not found`);
-          return 'https://<your-username>.github.io/ataraxiaquiz/assets/sigil-sorin.png';
+          return 'https://shelmasahayam.github.io/ataraxiaquiz/assets/sigil-sorin.png';
         }
       };
 
@@ -369,7 +369,7 @@
                 src={getSigilImage(result)}
                 alt={`${result} Sigil`}
                 className="mx-auto mb-6 w-32 h-32"
-                onError={(e) => (e.target.src = 'https://<your-username>.github.io/ataraxiaquiz/assets/sigil-sorin.png')}
+                onError={(e) => (e.target.src = 'https://shelmasahayam.github.io/ataraxiaquiz/assets/sigil-sorin.png')}
               />
             </div>
             <div className="flex justify-center gap-4 mb-6">
