--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       overflow-x: hidden;
     }
     .cursor-quill {
-      cursor: url('https://<your-username>.github.io/ataraxiaquiz/assets/quill-cursor.png'), auto;
+      cursor: url('https://shelmasahayam.github.io/ataraxiaquiz/assets/quill-cursor.png'), auto;
     }
     #result-card {
       background: rgba(0, 0, 0, 0.7);
@@ -345,7 +345,7 @@
       };
 
       const shareOnX = () => {
-        const text = encodeURIComponent(`I got ${result} in the Ataraxia Realm Quiz! Discover your realm at https://<your-username>.github.io/ataraxiaquiz/`);
+        const text = encodeURIComponent(`I got ${result} in the Ataraxia Realm Quiz! Discover your realm at https://shelmasahayam.github.io/ataraxiaquiz/`);
         window.open(`https://x.com/intent/tweet?text=${text}`, '_blank');
       };
 
@@ -364,10 +364,10 @@
 
       const getSigilImage = (realm) => {
         try {
-          return `https://<your-username>.github.io/ataraxiaquiz/assets/sigil-${realm.toLowerCase().replace(' ', '-')}.png`;
+          return `https://shelmasahayam.github.io/ataraxiaquiz/assets/sigil-${realm.toLowerCase().replace(' ', '-')}.png`;
         } catch (e) {
           console.error(`Sigil image for ${realm} not found`);
-          return 'https://<your-username>.github.io/ataraxiaquiz/assets/sigil-sorin.png';
+          return 'https://shelmasahayam.github.io/ataraxiaquiz/assets/sigil-sorin.png';
         }
       };
 
@@ -385,13 +385,13 @@
                 src={getSigilImage(result)}
                 alt={`${result} Sigil`}
                 className="mx-auto mb-6 w-32 h-32"
-                onError={(e) => (e.target.src = 'https://<your-username>.github.io/ataraxiaquiz/assets/sigil-sorin.png')}
+                onError={(e) => (e.target.src = 'https://shelmasahayam.github.io/ataraxiaquiz/assets/sigil-sorin.png')}
               />
               {/* Optional: Amazon affiliate-linked image */}
               <p className="text-gray-300 mb-4">Explore items inspired by {result}</p>
               <a href={realmAffiliateLinks[result]} target="_blank" rel="noopener noreferrer">
                 <img
-                  src="https://<your-username>.github.io/ataraxiaquiz/assets/amazon-product.jpg"
+                  src="https://shelmasahayam.github.io/ataraxiaquiz/assets/amazon-product.jpg"
                   alt="Explore on Amazon"
                   className="mx-auto mb-6 w-32 h-32"
                 />
@@ -456,3 +456,4 @@
   </script>
 </body>
 </html>
+
