--- a/index.html
+++ b/index.html
@@ -255,21 +255,6 @@
       Ascian: "A land of manes near Kural, Ascian beckons those who find freedom in solitude and practical ingenuity.",
     };
 
-    // Optional: Amazon affiliate links for each realm (replace with your links)
-    const realmAffiliateLinks = {
-      Nesrin: "https://www.amazon.com/dp/B08J4K7XYZ?tag=youraffiliateid-20",
-      Sorin: "https://www.amazon.com/dp/B09K5M8N12?tag=youraffiliateid-20",
-      Prisca: "https://www.amazon.com/dp/B07H9J2PQR?tag=youraffiliateid-20",
-      "Niji Archipelagoes": "https://www.amazon.com/dp/B06X3Y7Z8W?tag=youraffiliateid-20",
-      Harmaa: "https://www.amazon.com/dp/B08L5N6K2P?tag=youraffiliateid-20",
-      Aceso: "https://www.amazon.com/dp/B09M7V3T4R?tag=youraffiliateid-20",
-      Kural: "https://www.amazon.com/dp/B07N4G8M9S?tag=youraffiliateid-20",
-      Cozen: "https://www.amazon.com/dp/B08P3W5T6Y?tag=youraffiliateid-20",
-      Niran: "https://www.amazon.com/dp/B09Q2F8R7T?tag=youraffiliateid-20",
-      Nagam: "https://www.amazon.com/dp/B06Y5N3K8P?tag=youraffiliateid-20",
-      Ascian: "https://www.amazon.com/dp/B07T4H9M2X?tag=youraffiliateid-20",
-    };
-
     const ProgressBar = ({ current, total }) => {
       return (
         <div className="w-full max-w-md mx-auto mt-4">
@@ -284,31 +269,53 @@
     };
 
     const EmailForm = ({ onSubmit }) => {
+      const [email, setEmail] = React.useState('');
+      const [error, setError] = React.useState(null);
+
+      const handleSubmit = (e) => {
+        e.preventDefault();
+        if (!email) {
+          setError('Please enter a valid email.');
+          return;
+        }
+        // Programmatically submit the hidden form
+        const form = document.getElementById('brevo-form');
+        form.querySelector('input[name="EMAIL"]').value = email;
+        form.submit();
+        onSubmit(e); // Proceed to show results
+      };
+
       return (
         <div className="text-center p-6 max-w-lg mx-auto cursor-quill">
           <h2 className="text-2xl font-cinzel text-amber-300 mb-4">Enter Your Email</h2>
           <p className="text-gray-300 mb-6">Provide your email to receive your Ataraxia realm results and the first chapter of Ataraxia.</p>
-          <form
-            action="https://<your-brevo-account>.sendinblue.com/users/subscribe/js_id/<your-js-id>/id/<your-form-id>"
-            method="POST"
-            onSubmit={onSubmit}
-            className="flex flex-col items-center"
-          >
+          <div className="flex flex-col items-center">
             <input
               type="email"
-              name="EMAIL"
+              value={email}
+              onChange={(e) => setEmail(e.target.value)}
               placeholder="Enter your email"
               className="bg-gray-800 text-gray-200 px-4 py-2 rounded-lg mb-4 w-full max-w-xs"
               required
             />
-            <input type="hidden" name="js_id" value="<your-js-id>" />
-            <input type="hidden" name="id" value="<your-form-id>" />
+            {error && <p className="text-red-400 mb-4">{error}</p>}
             <button
-              type="submit"
+              onClick={handleSubmit}
               className="bg-amber-500 text-gray-900 px-6 py-2 rounded-full hover:bg-amber-400 transition font-cinzel"
             >
               See Your Realm
             </button>
+          </div>
+          {/* Hidden form for Brevo submission */}
+          <form
+            id="brevo-form"
+            action="https://<your-brevo-account>.sendinblue.com/users/subscribe/js_id/<your-js-id>/id/<your-form-id>"
+            method="POST"
+            style={{ display: 'none' }}
+          >
+            <input type="email" name="EMAIL" />
+            <input type="hidden" name="js_id" value="<your-js-id>" />
+            <input type="hidden" name="id" value="<your-form-id>" />
           </form>
         </div>
       );
@@ -387,16 +394,6 @@
                 className="mx-auto mb-6 w-32 h-32"
                 onError={(e) => (e.target.src = 'https://shelmasahayam.github.io/ataraxiaquiz/assets/sigil-sorin.png')}
               />
-              {/* Optional: Amazon affiliate-linked image */}
-              <p className="text-gray-300 mb-4">Explore items inspired by {result}</p>
-              <a href={realmAffiliateLinks[result]} target="_blank" rel="noopener noreferrer">
-                <img
-                  src="https://shelmasahayam.github.io/ataraxiaquiz/assets/amazon-product.jpg"
-                  alt="Explore on Amazon"
-                  className="mx-auto mb-6 w-32 h-32"
-                />
-              </a>
-              <p className="text-sm text-gray-400 mb-4">As an Amazon Associate, we earn from qualifying purchases.</p>
             </div>
             <div className="flex justify-center gap-4 mb-6">
               <button
