--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ataraxia Realm Quiz</title>
-  <!-- Tailwind CSS CDN -->
-  <script src="https://cdn.tailwindcss.com"></script>
   <!-- Google Fonts for Cinzel and Lora -->
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Lora:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
   <!-- html2canvas CDN for Instagram sharing -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+  <!-- Brevo Form Styles (Adapted) -->
   <style>
     body {
       font-family: 'Lora', serif;
@@ -19,6 +18,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      margin: 0;
       overflow-x: hidden;
     }
     .cursor-quill {
@@ -28,17 +28,177 @@
       background: rgba(0, 0, 0, 0.7);
       border-radius: 10px;
       padding: 20px;
+      max-width: 540px;
+      margin: 0 auto;
+    }
+    #sib-container input:-ms-input-placeholder {
+      text-align: left;
+      font-family: 'Lora', serif;
+      color: #c0ccda;
+    }
+    #sib-container input::placeholder {
+      text-align: left;
+      font-family: 'Lora', serif;
+      color: #c0ccda;
+    }
+    #sib-container a {
+      text-decoration: underline;
+      color: #f59e0b; /* amber-500 equivalent */
+    }
+    #error-message, #success-message {
+      font-family: 'Lora', serif;
+      font-size: 16px;
+      text-align: center;
+      color: #661d1d; /* error */
+      background-color: #ffeded;
+      border-radius: 3px;
+      border: 1px solid #ff4949;
+      max-width: 540px;
+      margin: 0 auto;
+      padding: 8px;
+    }
+    #success-message {
+      color: #085229; /* success */
+      background-color: #e7faf0;
+      border-color: #13ce66;
+    }
+    .quiz-container {
+      text-align: center;
+      padding: 24px;
+      max-width: 540px;
+      margin: 0 auto;
+    }
+    .progress-bar {
+      width: 100%;
+      max-width: 400px;
+      margin: 16px auto;
+      background-color: #4b5563; /* gray-700 */
+      height: 8px;
+      border-radius: 9999px;
+    }
+    .progress-bar-fill {
+      background-color: #f59e0b; /* amber-400 */
+      height: 8px;
+      border-radius: 9999px;
+      transition: width 0.3s ease-in-out;
+    }
+    .question-text {
+      font-size: 24px;
+      color: #e2e8f0; /* gray-200 */
+      margin-bottom: 24px;
+    }
+    .option-button {
+      background-color: #1f2937; /* gray-800 */
+      color: #e2e8f0; /* gray-200 */
+      padding: 12px 24px;
+      border-radius: 8px;
+      border: none;
+      width: 100%;
+      margin-bottom: 16px;
+      font-size: 16px;
+      cursor: pointer;
+      transition: background-color 0.2s;
+    }
+    .option-button:hover {
+      background-color: #374151; /* gray-700 */
+    }
+    .email-input {
+      background-color: #1f2937; /* gray-800 */
+      color: #e2e8f0; /* gray-200 */
+      padding: 8px 16px;
+      border-radius: 8px;
+      border: none;
+      width: 100%;
+      max-width: 300px;
+      margin-bottom: 16px;
+      font-size: 16px;
+    }
+    .submit-button {
+      background-color: #f59e0b; /* amber-500 */
+      color: #111827; /* gray-900 */
+      padding: 8px 24px;
+      border-radius: 9999px;
+      border: none;
+      font-family: 'Cinzel', serif;
+      font-size: 16px;
+      cursor: pointer;
+      transition: background-color 0.2s;
+    }
+    .submit-button:hover {
+      background-color: #fbbf24; /* amber-400 */
+    }
+    .error-text {
+      color: #f87171; /* red-400 */
+      margin-bottom: 16px;
+      font-size: 14px;
+    }
+    .share-button-x {
+      background-color: #2563eb; /* blue-600 */
+      color: #ffffff;
+      padding: 8px 16px;
+      border-radius: 9999px;
+      border: none;
+      font-family: 'Cinzel', serif;
+      font-size: 14px;
+      cursor: pointer;
+      margin-right: 16px;
+      transition: background-color 0.2s;
+    }
+    .share-button-x:hover {
+      background-color: #3b82f6; /* blue-500 */
+    }
+    .share-button-instagram {
+      background-color: #db2777; /* pink-600 */
+      color: #ffffff;
+      padding: 8px 16px;
+      border-radius: 9999px;
+      border: none;
+      font-family: 'Cinzel', serif;
+      font-size: 14px;
+      cursor: pointer;
+      margin-right: 16px;
+      transition: background-color 0.2s;
+    }
+    .share-button-instagram:hover {
+      background-color: #ec4899; /* pink-500 */
+    }
+    .button-container {
+      display: flex;
+      justify-content: center;
+      gap: 16px;
+      margin-bottom: 24px;
+    }
+    .title {
+      font-family: 'Cinzel', serif;
+      font-size: 36px;
+      color: #f59e0b; /* amber-300 */
+      margin-bottom: 32px;
+    }
+    .subtitle {
+      font-family: 'Cinzel', serif;
+      font-size: 24px;
+      color: #f59e0b; /* amber-300 */
+      margin-bottom: 16px;
+    }
+    .text-gray-300 {
+      color: #d1d5db; /* gray-300 */
+      margin-bottom: 24px;
+      font-size: 16px;
+    }
+    .result-text {
+      font-size: 20px;
+      color: #e2e8f0; /* gray-200 */
+      margin-bottom: 24px;
     }
   </style>
+  <link rel="stylesheet" href="https://sibforms.com/forms/end-form/build/sib-styles.css">
 </head>
 <body>
   <div id="root"></div>
   <!-- React and ReactDOM CDNs -->
   <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
-  <!-- Babel CDN for JSX -->
-  <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-  <script type="text/babel">
+  <script type="text/javascript">
     const questions = [
       {
         id: 1,
@@ -256,15 +416,16 @@
     };
 
     const ProgressBar = ({ current, total }) => {
-      return (
-        <div className="w-full max-w-md mx-auto mt-4">
-          <div className="bg-gray-700 h-2 rounded-full">
-            <div
-              className="bg-amber-400 h-2 rounded-full transition-all duration-300"
-              style={{ width: `${(current / total) * 100}%` }}
-            ></div>
-          </div>
-        </div>
+      return React.createElement(
+        'div',
+        { className: 'progress-bar' },
+        React.createElement(
+          'div',
+          {
+            className: 'progress-bar-fill',
+            style: { width: `${(current / total) * 100}%` }
+          }
+        )
       );
     };
 
@@ -274,50 +435,48 @@
 
       const handleSubmit = (e) => {
         e.preventDefault();
-        if (!email) {
+        if (!email || !/^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email)) {
           setError('Please enter a valid email.');
           return;
         }
-        // Programmatically submit the hidden form
         const form = document.getElementById('brevo-form');
         form.querySelector('input[name="EMAIL"]').value = email;
         form.submit();
-        onSubmit(e); // Proceed to show results
+        onSubmit(e);
       };
 
-      return (
-        <div className="text-center p-6 max-w-lg mx-auto cursor-quill">
-          <h2 className="text-2xl font-cinzel text-amber-300 mb-4">Enter Your Email</h2>
-          <p className="text-gray-300 mb-6">Provide your email to receive your Ataraxia realm results and the first chapter of Ataraxia.</p>
-          <div className="flex flex-col items-center">
-            <input
-              type="email"
-              value={email}
-              onChange={(e) => setEmail(e.target.value)}
-              placeholder="Enter your email"
-              className="bg-gray-800 text-gray-200 px-4 py-2 rounded-lg mb-4 w-full max-w-xs"
-              required
-            />
-            {error && <p className="text-red-400 mb-4">{error}</p>}
-            <button
-              onClick={handleSubmit}
-              className="bg-amber-500 text-gray-900 px-6 py-2 rounded-full hover:bg-amber-400 transition font-cinzel"
-            >
-              See Your Realm
-            </button>
-          </div>
-          {/* Hidden form for Brevo submission */}
-          <form
-            id="brevo-form"
-            action="https://<your-brevo-account>.sendinblue.com/users/subscribe/js_id/<your-js-id>/id/<your-form-id>"
-            method="POST"
-            style={{ display: 'none' }}
-          >
-            <input type="email" name="EMAIL" />
-            <input type="hidden" name="js_id" value="<your-js-id>" />
-            <input type="hidden" name="id" value="<your-form-id>" />
-          </form>
-        </div>
+      return React.createElement(
+        'div',
+        { className: 'quiz-container cursor-quill' },
+        React.createElement('h2', { className: 'subtitle' }, 'Enter Your Email'),
+        React.createElement('p', { className: 'text-gray-300' }, 'Provide your email to receive your Ataraxia realm results and the first chapter of Ataraxia.'),
+        React.createElement(
+          'div',
+          { style: { display: 'flex', flexDirection: 'column', alignItems: 'center' } },
+          React.createElement('input', {
+            type: 'email',
+            value: email,
+            onChange: (e) => setEmail(e.target.value),
+            placeholder: 'Enter your email',
+            className: 'email-input',
+            required: true
+          }),
+          error && React.createElement('p', { className: 'error-text' }, error),
+          React.createElement('button', { onClick: handleSubmit, className: 'submit-button' }, 'See Your Realm')
+        ),
+        React.createElement(
+          'form',
+          {
+            id: 'brevo-form',
+            action: 'https://438a9235.sibforms.com/serve/MUIFAHIY2DfRgKzSVjeBG80hDx2l0Uq-tfDSYgsB3-Rool1s5GCUdziUZzvaEgB5V3l0SyY1wFAZ8VM0cw1ro0SZ_ZsYtP0uSbpHjzn7vDNEqE8Oiu7IABn6oldtyFUxl3Svv9a26l5hIJ2AADpoiSnXPoZt2a3TklMHF8iNeJ0av1ihA2Vh6KTJdhNG5mek4GVSoBjgohYJvC97',
+            method: 'POST',
+            style: { display: 'none' }
+          },
+          React.createElement('input', { type: 'text', name: 'EMAIL' }),
+          React.createElement('input', { type: 'text', name: 'email_address_check', value: '' }),
+          React.createElement('input', { type: 'hidden', name: 'locale', value: 'en' }),
+          React.createElement('input', { type: 'hidden', name: 'html_type', value: 'simple' })
+        )
       );
     };
 
@@ -379,77 +538,87 @@
       };
 
       if (showEmailForm) {
-        return <EmailForm onSubmit={handleEmailSubmit} />;
+        return React.createElement(EmailForm, { onSubmit: handleEmailSubmit });
       }
 
       if (result) {
-        return (
-          <div className="text-center p-6 max-w-lg mx-auto cursor-quill">
-            <div id="result-card">
-              <h2 className="text-3xl font-cinzel text-amber-300 mb-4">Your Realm: {result}</h2>
-              <p className="text-xl text-gray-200 mb-6">{realmDescriptions[result]}</p>
-              <img
-                src={getSigilImage(result)}
-                alt={`${result} Sigil`}
-                className="mx-auto mb-6 w-32 h-32"
-                onError={(e) => (e.target.src = 'https://shelmasahayam.github.io/ataraxiaquiz/assets/sigil-sorin.png')}
-              />
-            </div>
-            <div className="flex justify-center gap-4 mb-6">
-              <button
-                onClick={shareOnX}
-                className="bg-blue-600 text-white px-4 py-2 rounded-full hover:bg-blue-500 transition font-cinzel"
-              >
-                Share on X
-              </button>
-              <button
-                onClick={shareOnInstagram}
-                className="bg-pink-600 text-white px-4 py-2 rounded-full hover:bg-pink-500 transition font-cinzel"
-              >
-                Share on Instagram
-              </button>
-              <button
-                onClick={() => window.open('https://yourdomain.com/members-area', '_blank')}
-                className="bg-amber-500 text-gray-900 px-4 py-2 rounded-full hover:bg-amber-400 transition font-cinzel"
-              >
-                Join Us
-              </button>
-            </div>
-          </div>
+        return React.createElement(
+          'div',
+          { className: 'quiz-container cursor-quill' },
+          React.createElement(
+            'div',
+            { id: 'result-card' },
+            React.createElement('h2', { className: 'subtitle' }, `Your Realm: ${result}`),
+            React.createElement('p', { className: 'result-text' }, realmDescriptions[result]),
+            React.createElement('img', {
+              src: getSigilImage(result),
+              alt: `${result} Sigil`,
+              style: { width: '128px', height: '128px', margin: '0 auto 24px' },
+              onError: (e) => (e.target.src = 'https://shelmasahayam.github.io/ataraxiaquiz/assets/sigil-sorin.png')
+            })
+          ),
+          React.createElement(
+            'div',
+            { className: 'button-container' },
+            React.createElement('button', { onClick: shareOnX, className: 'share-button-x' }, 'Share on X'),
+            React.createElement('button', { onClick: shareOnInstagram, className: 'share-button-instagram' }, 'Share on Instagram')
+          )
         );
       }
 
       const question = questions[currentQuestion];
 
-      return (
-        <div className="text-center p-6 max-w-lg mx-auto cursor-quill">
-          <h1 className="text-4xl font-cinzel text-amber-300 mb-8">Discover Your Ataraxia Realm</h1>
-          <ProgressBar current={currentQuestion + 1} total={questions.length} />
-          <h2 className="text-2xl text-gray-200 mb-6">{question.text}</h2>
-          <div className="grid gap-4">
-            {question.options.map((option, index) => (
-              <button
-                key={index}
-                onClick={() => handleAnswer(option.value, question.dimension)}
-                className="bg-gray-800 text-gray-200 px-6 py-3 rounded-lg hover:bg-gray-700 transition"
-              >
-                {option.text}
-              </button>
-            ))}
-          </div>
-        </div>
+      return React.createElement(
+        'div',
+        { className: 'quiz-container cursor-quill' },
+        React.createElement('h1', { className: 'title' }, 'Discover Your Ataraxia Realm'),
+        React.createElement(ProgressBar, { current: currentQuestion + 1, total: questions.length }),
+        React.createElement('h2', { className: 'question-text' }, question.text),
+        React.createElement(
+          'div',
+          { style: { display: 'grid', gap: '16px' } },
+          question.options.map((option, index) =>
+            React.createElement(
+              'button',
+              {
+                key: index,
+                onClick: () => handleAnswer(option.value, question.dimension),
+                className: 'option-button'
+              },
+              option.text
+            )
+          )
+        )
       );
     };
 
     const App = () => {
-      return (
-        <div className="min-h-screen flex items-center justify-center">
-          <Quiz />
-        </div>
+      return React.createElement(
+        'div',
+        { style: { minHeight: '100vh', display: 'flex', alignItems: 'center', justifyContent: 'center' } },
+        React.createElement(Quiz)
       );
     };
 
-    ReactDOM.render(<App />, document.getElementById('root'));
+    ReactDOM.render(React.createElement(App), document.getElementById('root'));
   </script>
+  <!-- Brevo Validation Script -->
+  <script>
+    window.REQUIRED_CODE_ERROR_MESSAGE = 'Please choose a country code';
+    window.LOCALE = 'en';
+    window.EMAIL_INVALID_MESSAGE = window.SMS_INVALID_MESSAGE = "The information provided is invalid. Please review the field format and try again.";
+    window.REQUIRED_ERROR_MESSAGE = "This field cannot be left blank.";
+    window.GENERIC_INVALID_MESSAGE = "The information provided is invalid. Please review the field format and try again.";
+    window.translation = {
+      common: {
+        selectedList: '{quantity} list selected',
+        selectedLists: '{quantity} lists selected',
+        selectedOption: '{quantity} selected',
+        selectedOptions: '{quantity} selected',
+      }
+    };
+    var AUTOHIDE = Boolean(1);
+  </script>
+  <script defer src="https://sibforms.com/forms/end-form/build/main.js"></script>
 </body>
 </html>
