--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Lora:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
   <!-- html2canvas CDN for Instagram sharing -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-  <!-- Brevo Form Styles (Adapted) -->
   <style>
     body {
       font-family: 'Lora', serif;
@@ -30,37 +29,6 @@
       padding: 20px;
       max-width: 540px;
       margin: 0 auto;
-    }
-    #sib-container input:-ms-input-placeholder {
-      text-align: left;
-      font-family: 'Lora', serif;
-      color: #c0ccda;
-    }
-    #sib-container input::placeholder {
-      text-align: left;
-      font-family: 'Lora', serif;
-      color: #c0ccda;
-    }
-    #sib-container a {
-      text-decoration: underline;
-      color: #f59e0b; /* amber-500 equivalent */
-    }
-    #error-message, #success-message {
-      font-family: 'Lora', serif;
-      font-size: 16px;
-      text-align: center;
-      color: #661d1d; /* error */
-      background-color: #ffeded;
-      border-radius: 3px;
-      border: 1px solid #ff4949;
-      max-width: 540px;
-      margin: 0 auto;
-      padding: 8px;
-    }
-    #success-message {
-      color: #085229; /* success */
-      background-color: #e7faf0;
-      border-color: #13ce66;
     }
     .quiz-container {
       text-align: center;
@@ -102,7 +70,7 @@
     .option-button:hover {
       background-color: #374151; /* gray-700 */
     }
-    .email-input {
+    .name-input {
       background-color: #1f2937; /* gray-800 */
       color: #e2e8f0; /* gray-200 */
       padding: 8px 16px;
@@ -112,6 +80,10 @@
       max-width: 300px;
       margin-bottom: 16px;
       font-size: 16px;
+    }
+    .name-input::placeholder {
+      color: #c0ccda; /* gray-400 */
+      font-family: 'Lora', serif;
     }
     .submit-button {
       background-color: #f59e0b; /* amber-500 */
@@ -191,7 +163,6 @@
       margin-bottom: 24px;
     }
   </style>
-  <link rel="stylesheet" href="https://sibforms.com/forms/end-form/build/sib-styles.css">
 </head>
 <body>
   <div id="root"></div>
@@ -429,53 +400,37 @@
       );
     };
 
-    const EmailForm = ({ onSubmit }) => {
-      const [email, setEmail] = React.useState('');
+    const NameForm = ({ onSubmit }) => {
+      const [name, setName] = React.useState('');
       const [error, setError] = React.useState(null);
 
       const handleSubmit = (e) => {
         e.preventDefault();
-        if (!email || !/^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email)) {
-          setError('Please enter a valid email.');
+        if (!name || !/^[a-zA-Z\s]+$/.test(name.trim())) {
+          setError('Please enter a valid name (letters and spaces only).');
           return;
         }
-        const form = document.getElementById('brevo-form');
-        form.querySelector('input[name="EMAIL"]').value = email;
-        form.submit();
-        onSubmit(e);
+        onSubmit(name.trim());
       };
 
       return React.createElement(
         'div',
         { className: 'quiz-container cursor-quill' },
-        React.createElement('h2', { className: 'subtitle' }, 'Enter Your Email'),
-        React.createElement('p', { className: 'text-gray-300' }, 'Provide your email to receive your Ataraxia realm results and the first chapter of Ataraxia.'),
+        React.createElement('h2', { className: 'subtitle' }, 'Enter Your Name'),
+        React.createElement('p', { className: 'text-gray-300' }, 'Tell us your adventurer’s name to discover your Ataraxia realm.'),
         React.createElement(
           'div',
           { style: { display: 'flex', flexDirection: 'column', alignItems: 'center' } },
           React.createElement('input', {
-            type: 'email',
-            value: email,
-            onChange: (e) => setEmail(e.target.value),
-            placeholder: 'Enter your email',
-            className: 'email-input',
+            type: 'text',
+            value: name,
+            onChange: (e) => setName(e.target.value),
+            placeholder: 'Enter your name',
+            className: 'name-input',
             required: true
           }),
           error && React.createElement('p', { className: 'error-text' }, error),
           React.createElement('button', { onClick: handleSubmit, className: 'submit-button' }, 'See Your Realm')
-        ),
-        React.createElement(
-          'form',
-          {
-            id: 'brevo-form',
-            action: 'https://438a9235.sibforms.com/serve/MUIFAHIY2DfRgKzSVjeBG80hDx2l0Uq-tfDSYgsB3-Rool1s5GCUdziUZzvaEgB5V3l0SyY1wFAZ8VM0cw1ro0SZ_ZsYtP0uSbpHjzn7vDNEqE8Oiu7IABn6oldtyFUxl3Svv9a26l5hIJ2AADpoiSnXPoZt2a3TklMHF8iNeJ0av1ihA2Vh6KTJdhNG5mek4GVSoBjgohYJvC97',
-            method: 'POST',
-            style: { display: 'none' }
-          },
-          React.createElement('input', { type: 'text', name: 'EMAIL' }),
-          React.createElement('input', { type: 'text', name: 'email_address_check', value: '' }),
-          React.createElement('input', { type: 'hidden', name: 'locale', value: 'en' }),
-          React.createElement('input', { type: 'hidden', name: 'html_type', value: 'simple' })
         )
       );
     };
@@ -483,23 +438,24 @@
     const Quiz = () => {
       const [currentQuestion, setCurrentQuestion] = React.useState(0);
       const [scores, setScores] = React.useState({ E: 0, I: 0, S: 0, N: 0, T: 0, F: 0, J: 0, P: 0 });
-      const [showEmailForm, setShowEmailForm] = React.useState(false);
+      const [showNameForm, setShowNameForm] = React.useState(false);
       const [result, setResult] = React.useState(null);
+      const [adventurerName, setAdventurerName] = React.useState('');
 
       const handleAnswer = (value, dimension) => {
         setScores((prev) => ({ ...prev, [value]: prev[value] + 1 }));
         if (currentQuestion < questions.length - 1) {
           setCurrentQuestion(currentQuestion + 1);
         } else {
-          setShowEmailForm(true);
+          setShowNameForm(true);
         }
       };
 
-      const handleEmailSubmit = (event) => {
-        event.preventDefault();
+      const handleNameSubmit = (name) => {
         const mbtiType = determineMBTI(scores);
         setResult(realmMappings[mbtiType] || "Sorin");
-        setShowEmailForm(false);
+        setAdventurerName(name);
+        setShowNameForm(false);
       };
 
       const determineMBTI = (scores) => {
@@ -537,8 +493,8 @@
         }
       };
 
-      if (showEmailForm) {
-        return React.createElement(EmailForm, { onSubmit: handleEmailSubmit });
+      if (showNameForm) {
+        return React.createElement(NameForm, { onSubmit: handleNameSubmit });
       }
 
       if (result) {
@@ -548,7 +504,7 @@
           React.createElement(
             'div',
             { id: 'result-card' },
-            React.createElement('h2', { className: 'subtitle' }, `Your Realm: ${result}`),
+            React.createElement('h2', { className: 'subtitle' }, `Welcome, ${adventurerName}, to ${result}!`),
             React.createElement('p', { className: 'result-text' }, realmDescriptions[result]),
             React.createElement('img', {
               src: getSigilImage(result),
@@ -602,23 +558,5 @@
 
     ReactDOM.render(React.createElement(App), document.getElementById('root'));
   </script>
-  <!-- Brevo Validation Script -->
-  <script>
-    window.REQUIRED_CODE_ERROR_MESSAGE = 'Please choose a country code';
-    window.LOCALE = 'en';
-    window.EMAIL_INVALID_MESSAGE = window.SMS_INVALID_MESSAGE = "The information provided is invalid. Please review the field format and try again.";
-    window.REQUIRED_ERROR_MESSAGE = "This field cannot be left blank.";
-    window.GENERIC_INVALID_MESSAGE = "The information provided is invalid. Please review the field format and try again.";
-    window.translation = {
-      common: {
-        selectedList: '{quantity} list selected',
-        selectedLists: '{quantity} lists selected',
-        selectedOption: '{quantity} selected',
-        selectedOptions: '{quantity} selected',
-      }
-    };
-    var AUTOHIDE = Boolean(1);
-  </script>
-  <script defer src="https://sibforms.com/forms/end-form/build/main.js"></script>
 </body>
 </html>
